# ChangeLog for x11-misc/xrmap
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xrmap/ChangeLog,v 1.5 2004/08/14 14:57:28 swegener Exp $

  14 Aug 2004; Sven Wegener <swegener@gentoo.org> xrmap-2.10.ebuild,
  xrmap-2.29.ebuild:
  Trimmed trailing whitespace.

*xrmap-2.29 (03 Jul 2004)

  03 Jul 2004; <pyrania@gentoo.org> +xrmap-2.29.ebuild:
  Version bump. Closing bug #47525.

  19 Jun 2004; <pyrania@gentoo.org> xrmap-2.10.ebuild:
  Stable on x86.

*xrmap-2.10 (06 Mar 2004)

  06 Mar 2004; Markus Nigbur <pyrania@gentoo.org> xrmap-2.10.ebuild:
  Initial import.
