@@ -1,10 +1,12 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xrmap/xrmap-2.29.ebuild,v 1.2 2004/08/14 14:57:28 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xrmap/xrmap-2.29.ebuild,v 1.3 2004/08/27 10:55:25 pyrania Exp $
 
 DESCRIPTION="The Xrmap program is a X client for generating images of the Earth and manipulating the CIA World data bank"
 HOMEPAGE="http://frmas.free.fr/li_1.htm#_Xrmap_"
-SRC_URI="ftp://ftp.ac-grenoble.fr/ge/geosciences/${PN}/${P}.tar.bz2
+FULL_DIST="2.10"
+SRC_URI="ftp://ftp.ac-grenoble.fr/ge/geosciences/${PN}/${PN}-${FULL_DIST}.tgz
+		 ftp://ftp.ac-grenoble.fr/ge/geosciences/${PN}/${P}.tar.bz2
 		 ftp://ftp.ac-grenoble.fr/ge/geosciences/CIA_WDB2.jpd.gz"
 
 LICENSE="GPL-2"
@@ -17,6 +19,14 @@ DEPEND="media-gfx/imagemagick
 	media-libs/xpm
 	>=sys-apps/sed-4
 	zlib? ( sys-libs/zlib )"
+
+src_unpack() {
+	unpack ${A}
+	rm -rf ${S}
+	mv ${WORKDIR}/${PN}-${FULL_DIST} ${S}
+	unpack ${A}
+	cd ${S}/editkit && xmkmf || die
+}
 
 src_compile() {
 	use zlib || sed -i 's/-DZLIB\|-lz//g' Makefile.noimake || die
@@ -42,7 +52,7 @@ src_install() {
 	dobin xrmap tools/preproc tools/jpd2else/jpd2else tools/cbd2else/cbd2else || die
 	dodir /usr/share/${PN}/ || die
 	dodir /etc/xrmap  || die
-	cp -r {i18n,Locations,factbook,anthems,flags,hymns} ${D}/usr/share/${PN}/ || die
+	cp -r {i18n,Locations,factbook,anthems,flags,hymns,pixmaps} ${D}/usr/share/${PN}/ || die
 	cp Xrmaprc ${D}/etc/xrmap || die
 	cp ${WORKDIR}/CIA_WDB2.jpd ${D}/usr/share/${PN}/ || die
 	dodoc CHANGES COPYING README TODO WARNING tools/cbd2else/README.cbd tools/jpd2else/README.jpd tools/rez2else/README.rez || die
